# synthetic-gov-data-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EDGE_CASES.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  threshold_update.md
.jules/: bolt.md
data/census/: va.json
data/seeds/us/snap/: eligibility_rules_fy2026.txt
data/seeds/us/wic/: eligibility_rules_fy2026.txt
data/thresholds/: README.md  medicaid_cy2026.json  snap_fy2026.json  us_fpl_2025.json  us_fpl_2026.json  wic_fy2026.json
docs/: bring-your-own-policy.md  claude-code-integration.md  cli-integration.md  open-source-health.md
docs/programs/: snap.md
govsynth/: __init__.py  fiscal_year.py  pipeline.py  presets.py
govsynth/cli/: __init__.py  main.py  output.py  readers.py
govsynth/cli/commands/: __init__.py  batch.py  generate.py  list_presets.py  parse_policy.py  refresh_census.py  show.py  validate.py  verify.py
govsynth/evaluation/: __init__.py  rationale_evaluator.py
govsynth/formatters/: __init__.py  civbench_yaml.py  csv_fmt.py  hf_dataset.py  jsonl.py  yaml_fmt.py
govsynth/generators/: __init__.py  snap_eligibility.py  wic_eligibility.py
govsynth/models/: __init__.py  enums.py  rationale.py  test_case.py
govsynth/profiles/: __init__.py  us_household.py
govsynth/sources/: __init__.py  base.py
govsynth/sources/us/: __init__.py  census.py  census_fetcher.py  medicaid.py  snap.py  wic.py
notebooks/: 01_quickstart.ipynb  02_snap_edge_cases.ipynb  03_wic_eligibility.ipynb  04_batch_civbench_suite.ipynb  04_batch_pipeline.ipynb  04_wic_edge_cases.ipynb  05_realistic_profiles.ipynb  06_rationale_evaluation.ipynb  08_multi_state_batch.ipynb  09_cli_workflow.ipynb  10_custom_generator.ipynb
scripts/: verify_thresholds.py
tests/fixtures/: census_va.json
tests/integration/: test_cli_batch.py  test_cli_generate.py  test_cli_list_presets.py  test_cli_parse_policy.py  test_cli_refresh_census.py  test_cli_show.py  test_cli_validate.py  test_cli_verify.py
tests/unit/: test_census_source.py  test_cli_output.py  test_cli_readers.py  test_medicaid_caching.py  test_pipeline_console.py  test_snap_edge_cases.py  test_snap_source.py
